[package]
name = "image-to-minecraft"
version = "0.1.0"
authors = ["Barend <bvanrijn@users.noreply.github.com>"]

[dependencies]
color-thief = "0.1.0"
enigo = "0.0.11"
image = "0.20.1"
image-utils = "0.2.0"
rgb = "0.8.11"
rprompt = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0.4"
